Fixing ocean gap

--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -60,7 +60,7 @@
   }
 
   .home__ocean {
-    min-height: 277px;
+    display: block;
     z-index: -1;
   }
   .home__waves {
